growi/app-stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: app

spec:
  serviceName: app
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      enableServiceLinks: false
      containers:
        - name: app
          image: weseek/growi:6.0.4
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: config
          configMap:
            name: front-config
        - name: data
          hostPath:
            path: /srv/growi/data/growi
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3
