growi/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo

spec:
  type: ClusterIP
  ports:
    - targetPort: mongo
      name: mongo
      port: 27017
  selector:
    app: mongo
